fixed large gap

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -68,7 +68,7 @@ a:hover {
 
 .full {
     width: 100%;
-    height: 1250px;
+    height: 800px;
 }
 
 .highlight {
